force-app/main/default/objects/Consent__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consent related to applicant</description>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Applicant Consents</relationshipLabel>
    <relationshipName>ApplicantConsents</relationshipName>
    <type>Lookup</type>
</CustomField>