force-app/main/default/objects/Consent__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consent related to application</description>
    <inlineHelpText>Consent related to application</inlineHelpText>
    <label>Application</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>