force-app/main/default/objects/Consent__c/fields/ConsentLineItem__c.field-meta.xml
<CustomField>
    <fullName>ConsentLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>related template</description>
    <label>Consent Line Item</label>
    <referenceTo>ConsentLineItem__c</referenceTo>
    <relationshipLabel>Consent Consents</relationshipLabel>
    <relationshipName>ConsentConsents</relationshipName>
    <type>Lookup</type>
</CustomField>