force-app/main/default/objects/Consent__c/fields/ConsentTemplate__c.field-meta.xml
<CustomField>
    <fullName>ConsentTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Consent Templates</description>
    <label>Consent Template</label>
    <referenceTo>ConsentTemplate__c</referenceTo>
    <relationshipLabel>Consent Templates</relationshipLabel>
    <relationshipName>ConsentTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>