force-app/main/default/objects/Consent__c/fields/FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consent related to financial account</description>
    <label>Financial Account</label>
    <referenceTo>FinancialAccount__c</referenceTo>
    <relationshipLabel>Consent Consents</relationshipLabel>
    <relationshipName>ConsentConsents</relationshipName>
    <type>Lookup</type>
</CustomField>