force-app/main/default/objects/Consent__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Document need to render using Url </description>
    <label>URL</label>
    <type>Url</type>
</CustomField>